welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: ')' expected but ';' found.
gauche(gauche(gauche(gauche())); 
                               ^